# Android-UART-Tx-Rx-API-Demo

./: README.md
android-serialport-api-demo/app/: build.gradle
android-serialport-api-demo/app/src/main/: AndroidManifest.xml
android-serialport-api-demo/app/src/main/jni/: CMakeLists.txt  android_serialport_api_SerialPort.c
android-stm32-uart-command/android-stm32-uart-command/: gradle.properties  local.properties
android-stm32-uart-command/android-stm32-uart-command/app/: build.gradle
android-stm32-uart-command/android-stm32-uart-command/app/src/main/: AndroidManifest.xml
android-stm32-uart-command/android-stm32-uart-command/app/src/main/jni/: CMakeLists.txt  android_stm32_uart_SerialPort.c  android_stm32_uart_SerialPort.h
android-stm32-uart-command/android-stm32-uart-command/app/src/main/res/layout/: command.xml
android-stm32-uart-command/android-stm32-uart-command/app/src/main/res/values/: strings.xml
android-stm32-uart-command/android-stm32-uart-command/gradle/wrapper/: gradle-wrapper.properties
android-stm32-uart-command/android.stm32.uart/: Android.mk  app-debug.apk
tpv-smt32-uart-download-elf/: tpv.smt32.uart.app_log.txt
tpv-smt32-uart-download-elf/tpv-smt32-uart-download-elf/: .gitignore
tpv-smt32-uart-download-elf/tpv-smt32-uart-download-elf/app/: build.gradle
tpv-smt32-uart-download-elf/tpv-smt32-uart-download-elf/app/src/main/: AndroidManifest.xml
tpv-smt32-uart-download-elf/tpv-smt32-uart-download-elf/app/src/main/jni/: CMakeLists.txt  tpv_smt32_uart_SerialPort.c  tpv_smt32_uart_SerialPort.h
(+29 files in other folders)
